Successful translation erroneously reported on page with too little text

Before showing the translation bubble, check if there was an error during
previous translation. The previous error status will be set in LanguageState
as bool value and is checked when browser command Translate is executed.
This sets TRANSLATE_STEP_TRANSLATE_ERROR as next step to show appropriate
error message in the popup.

TEST=
(1) Load a page with little-to-no text (e.g. about:blank).
(2) Translate the page (through the right-click menu).
(3) Observe the error message bubble.
(4) Click the translate icon at the right of the omnibar.
(5) Error message bubble seen in (3) should be seen again.

BUG=721596
R=groby@chromium.org

Review-Url: https://codereview.chromium.org/2900603003
Cr-Commit-Position: refs/heads/master@{#478895}

Former-commit-id: f5ec8bec81e8f54e11e0367836294357dd99c915